--- a/trabajo-final-v1/src/main/resources/application.properties
+++ b/trabajo-final-v1/src/main/resources/application.properties
@@ -6,4 +6,5 @@ spring.datasource.password=
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.format_sql=True
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 server.port=8081
